keenan now just put the header links and footers on the form pages to carry over styling

--- a/css/style-New.css
+++ b/css/style-New.css
@@ -1,3 +1,10 @@
 .banner_content h1{
     color:red!important;
 }
+.copyright{
+    font-size: 2vh;
+}
+.productList{
+  font-size: 2vh;
+  margin-bottom:1vh;
+}
